sdk/storagecache/arm-storagecache/samples/v9/typescript/README.md
# @azure/arm-storagecache client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-storagecache in some common scenarios.

| **File Name**                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                              |
| ------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [amlFilesystemsArchiveSample.ts][amlfilesystemsarchivesample]                         | archive data from the AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_Archive.json                                                                                                                                                                                                                                                                                                            |
| [amlFilesystemsCancelArchiveSample.ts][amlfilesystemscancelarchivesample]             | cancel archiving data from the AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_CancelArchive.json                                                                                                                                                                                                                                                                                             |
| [amlFilesystemsCreateOrUpdateSample.ts][amlfilesystemscreateorupdatesample]           | create or update an AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [amlFilesystemsDeleteSample.ts][amlfilesystemsdeletesample]                           | schedules an AML file system for deletion. x-ms-original-file: 2026-08-01/amlFilesystems_Delete.json                                                                                                                                                                                                                                                                                                         |
| [amlFilesystemsGetSample.ts][amlfilesystemsgetsample]                                 | returns an AML file system. x-ms-original-file: 2026-08-01/amlFilesystems_Get.json                                                                                                                                                                                                                                                                                                                           |
| [amlFilesystemsListByResourceGroupSample.ts][amlfilesystemslistbyresourcegroupsample] | returns all AML file systems the user has access to under a resource group. x-ms-original-file: 2026-08-01/amlFilesystems_ListByResourceGroup.json                                                                                                                                                                                                                                                           |
| [amlFilesystemsListSample.ts][amlfilesystemslistsample]                               | returns all AML file systems the user has access to under a subscription. x-ms-original-file: 2026-08-01/amlFilesystems_List.json                                                                                                                                                                                                                                                                            |
| [amlFilesystemsUpdateSample.ts][amlfilesystemsupdatesample]                           | update an AML file system instance. x-ms-original-file: 2026-08-01/amlFilesystems_Update.json                                                                                                                                                                                                                                                                                                                |
| [ascOperationsGetSample.ts][ascoperationsgetsample]                                   | gets the status of an asynchronous operation for the Azure HPC Cache x-ms-original-file: 2026-08-01/AscOperations_Get.json                                                                                                                                                                                                                                                                                   |
| [ascUsagesListSample.ts][ascusageslistsample]                                         | gets the quantity used and quota limit for resources x-ms-original-file: 2026-08-01/AscResourceUsages_Get.json                                                                                                                                                                                                                                                                                               |
| [autoExportJobsCreateOrUpdateSample.ts][autoexportjobscreateorupdatesample]           | create or update an auto export job. x-ms-original-file: 2026-08-01/autoExportJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [autoExportJobsDeleteSample.ts][autoexportjobsdeletesample]                           | schedules an auto export job for deletion. x-ms-original-file: 2026-08-01/autoExportJobs_Delete.json                                                                                                                                                                                                                                                                                                         |
| [autoExportJobsGetSample.ts][autoexportjobsgetsample]                                 | returns an auto export job. x-ms-original-file: 2026-08-01/autoExportJobs_Get.json                                                                                                                                                                                                                                                                                                                           |
| [autoExportJobsListByAmlFilesystemSample.ts][autoexportjobslistbyamlfilesystemsample] | returns all the auto export jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/autoExportJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                     |
| [autoExportJobsUpdateSample.ts][autoexportjobsupdatesample]                           | update an auto export job instance. x-ms-original-file: 2026-08-01/autoExportJobs_Update.json                                                                                                                                                                                                                                                                                                                |
| [autoImportJobsCreateOrUpdateSample.ts][autoimportjobscreateorupdatesample]           | create or update an auto import job. x-ms-original-file: 2026-08-01/autoImportJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                       |
| [autoImportJobsDeleteSample.ts][autoimportjobsdeletesample]                           | schedules an auto import job for deletion. x-ms-original-file: 2026-08-01/autoImportJobs_Delete.json                                                                                                                                                                                                                                                                                                         |
| [autoImportJobsGetSample.ts][autoimportjobsgetsample]                                 | returns an auto import job. x-ms-original-file: 2026-08-01/autoImportJobs_Get.json                                                                                                                                                                                                                                                                                                                           |
| [autoImportJobsListByAmlFilesystemSample.ts][autoimportjobslistbyamlfilesystemsample] | returns all the auto import jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/autoImportJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                     |
| [autoImportJobsUpdateSample.ts][autoimportjobsupdatesample]                           | update an auto import job instance. x-ms-original-file: 2026-08-01/autoImportJobs_Update.json                                                                                                                                                                                                                                                                                                                |
| [cachesCreateOrUpdateSample.ts][cachescreateorupdatesample]                           | create or update a cache. x-ms-original-file: 2026-08-01/Caches_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                          |
| [cachesDebugInfoSample.ts][cachesdebuginfosample]                                     | tells a cache to write generate debug info for support to process. x-ms-original-file: 2026-08-01/Caches_DebugInfo.json                                                                                                                                                                                                                                                                                      |
| [cachesDeleteSample.ts][cachesdeletesample]                                           | schedules a cache for deletion. x-ms-original-file: 2026-08-01/Caches_Delete.json                                                                                                                                                                                                                                                                                                                            |
| [cachesFlushSample.ts][cachesflushsample]                                             | tells a cache to write all dirty data to the Storage Target(s). During the flush, clients will see errors returned until the flush is complete. x-ms-original-file: 2026-08-01/Caches_Flush.json                                                                                                                                                                                                             |
| [cachesGetSample.ts][cachesgetsample]                                                 | returns a cache. x-ms-original-file: 2026-08-01/Caches_Get.json                                                                                                                                                                                                                                                                                                                                              |
| [cachesListByResourceGroupSample.ts][cacheslistbyresourcegroupsample]                 | returns all caches the user has access to under a resource group. x-ms-original-file: 2026-08-01/Caches_ListByResourceGroup.json                                                                                                                                                                                                                                                                             |
| [cachesListSample.ts][cacheslistsample]                                               | returns all caches the user has access to under a subscription. x-ms-original-file: 2026-08-01/Caches_List.json                                                                                                                                                                                                                                                                                              |
| [cachesPausePrimingJobSample.ts][cachespauseprimingjobsample]                         | schedule a priming job to be paused. x-ms-original-file: 2026-08-01/PausePrimingJob.json                                                                                                                                                                                                                                                                                                                     |
| [cachesResumePrimingJobSample.ts][cachesresumeprimingjobsample]                       | resumes a paused priming job. x-ms-original-file: 2026-08-01/ResumePrimingJob.json                                                                                                                                                                                                                                                                                                                           |
| [cachesSpaceAllocationSample.ts][cachesspaceallocationsample]                         | update cache space allocation. x-ms-original-file: 2026-08-01/SpaceAllocation_Post.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStartPrimingJobSample.ts][cachesstartprimingjobsample]                         | create a priming job. This operation is only allowed when the cache is healthy. x-ms-original-file: 2026-08-01/StartPrimingJob.json                                                                                                                                                                                                                                                                          |
| [cachesStartSample.ts][cachesstartsample]                                             | tells a Stopped state cache to transition to Active state. x-ms-original-file: 2026-08-01/Caches_Start.json                                                                                                                                                                                                                                                                                                  |
| [cachesStopPrimingJobSample.ts][cachesstopprimingjobsample]                           | schedule a priming job for deletion. x-ms-original-file: 2026-08-01/StopPrimingJob.json                                                                                                                                                                                                                                                                                                                      |
| [cachesStopSample.ts][cachesstopsample]                                               | tells an Active cache to transition to Stopped state. x-ms-original-file: 2026-08-01/Caches_Stop.json                                                                                                                                                                                                                                                                                                        |
| [cachesUpdateSample.ts][cachesupdatesample]                                           | update a cache instance. x-ms-original-file: 2026-08-01/Caches_Update.json                                                                                                                                                                                                                                                                                                                                   |
| [cachesUpgradeFirmwareSample.ts][cachesupgradefirmwaresample]                         | upgrade a cache's firmware if a new version is available. Otherwise, this operation has no effect. x-ms-original-file: 2026-08-01/Caches_UpgradeFirmware.json                                                                                                                                                                                                                                                |
| [checkAmlFSSubnetsSample.ts][checkamlfssubnetssample]                                 | check that subnets will be valid for AML file system create calls. x-ms-original-file: 2026-08-01/checkAmlFSSubnets.json                                                                                                                                                                                                                                                                                     |
| [expansionJobsCreateOrUpdateSample.ts][expansionjobscreateorupdatesample]             | create or update an expansion job. x-ms-original-file: 2026-08-01/expansionJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                          |
| [expansionJobsDeleteSample.ts][expansionjobsdeletesample]                             | schedules an expansion job for deletion. x-ms-original-file: 2026-08-01/expansionJobs_Delete.json                                                                                                                                                                                                                                                                                                            |
| [expansionJobsGetSample.ts][expansionjobsgetsample]                                   | returns an expansion job. x-ms-original-file: 2026-08-01/expansionJobs_Get.json                                                                                                                                                                                                                                                                                                                              |
| [expansionJobsListByAmlFilesystemSample.ts][expansionjobslistbyamlfilesystemsample]   | returns all the expansion jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/expansionJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                        |
| [expansionJobsUpdateSample.ts][expansionjobsupdatesample]                             | update an expansion job instance. x-ms-original-file: 2026-08-01/expansionJobs_Update.json                                                                                                                                                                                                                                                                                                                   |
| [getRequiredAmlFSSubnetsSizeSample.ts][getrequiredamlfssubnetssizesample]             | get the number of available IP addresses needed for the AML file system information provided. x-ms-original-file: 2026-08-01/getRequiredAmlFSSubnetsSize.json                                                                                                                                                                                                                                                |
| [importJobsCreateOrUpdateSample.ts][importjobscreateorupdatesample]                   | create or update an import job. x-ms-original-file: 2026-08-01/importJobs_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                |
| [importJobsDeleteSample.ts][importjobsdeletesample]                                   | schedules an import job for deletion. x-ms-original-file: 2026-08-01/importJobs_Delete.json                                                                                                                                                                                                                                                                                                                  |
| [importJobsGetSample.ts][importjobsgetsample]                                         | returns an import job. x-ms-original-file: 2026-08-01/importJobs_Get.json                                                                                                                                                                                                                                                                                                                                    |
| [importJobsListByAmlFilesystemSample.ts][importjobslistbyamlfilesystemsample]         | returns all import jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/importJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                                  |
| [importJobsUpdateSample.ts][importjobsupdatesample]                                   | update an import job instance. x-ms-original-file: 2026-08-01/importJob_Update.json                                                                                                                                                                                                                                                                                                                          |
| [operationsListSample.ts][operationslistsample]                                       | lists all of the available Resource Provider operations. x-ms-original-file: 2026-08-01/Operations_List.json                                                                                                                                                                                                                                                                                                 |
| [rebalanceJobsDeleteSample.ts][rebalancejobsdeletesample]                             | schedules a rebalance job for deletion. x-ms-original-file: 2026-08-01/RebalanceJobs_Delete.json                                                                                                                                                                                                                                                                                                             |
| [rebalanceJobsGetSample.ts][rebalancejobsgetsample]                                   | returns a rebalance job. x-ms-original-file: 2026-08-01/RebalanceJobs_Get.json                                                                                                                                                                                                                                                                                                                               |
| [rebalanceJobsListByAmlFilesystemSample.ts][rebalancejobslistbyamlfilesystemsample]   | returns all the rebalance jobs the user has access to under an AML File System. x-ms-original-file: 2026-08-01/RebalanceJobs_ListByAmlFilesystem.json                                                                                                                                                                                                                                                        |
| [rebalanceJobsUpdateSample.ts][rebalancejobsupdatesample]                             | update a rebalance job instance. x-ms-original-file: 2026-08-01/RebalanceJobs_Update.json                                                                                                                                                                                                                                                                                                                    |
| [skusListSample.ts][skuslistsample]                                                   | get the list of StorageCache.Cache SKUs available to this subscription. x-ms-original-file: 2026-08-01/Skus_List.json                                                                                                                                                                                                                                                                                        |
| [storageTargetOperationsFlushSample.ts][storagetargetoperationsflushsample]           | tells the cache to write all dirty data to the Storage Target's backend storage. Client requests to this storage target's namespace will return errors until the flush operation completes. x-ms-original-file: 2026-08-01/StorageTargets_Flush.json                                                                                                                                                         |
| [storageTargetOperationsInvalidateSample.ts][storagetargetoperationsinvalidatesample] | invalidate all cached data for a storage target. Cached files are discarded and fetched from the back end on the next request. x-ms-original-file: 2026-08-01/StorageTargets_Invalidate.json                                                                                                                                                                                                                 |
| [storageTargetOperationsResumeSample.ts][storagetargetoperationsresumesample]         | resumes client access to a previously suspended storage target. x-ms-original-file: 2026-08-01/StorageTargets_Resume.json                                                                                                                                                                                                                                                                                    |
| [storageTargetOperationsSuspendSample.ts][storagetargetoperationssuspendsample]       | suspends client access to a storage target. x-ms-original-file: 2026-08-01/StorageTargets_Suspend.json                                                                                                                                                                                                                                                                                                       |
| [storageTargetsCreateOrUpdateSample.ts][storagetargetscreateorupdatesample]           | create or update a Storage Target. This operation is allowed at any time, but if the cache is down or unhealthy, the actual creation/modification of the Storage Target may be delayed until the cache is healthy again. x-ms-original-file: 2026-08-01/StorageTargets_CreateOrUpdate.json                                                                                                                   |
| [storageTargetsDeleteSample.ts][storagetargetsdeletesample]                           | removes a Storage Target from a cache. This operation is allowed at any time, but if the cache is down or unhealthy, the actual removal of the Storage Target may be delayed until the cache is healthy again. Note that if the cache has data to flush to the Storage Target, the data will be flushed before the Storage Target will be deleted. x-ms-original-file: 2026-08-01/StorageTargets_Delete.json |
| [storageTargetsDnsRefreshSample.ts][storagetargetsdnsrefreshsample]                   | tells a storage target to refresh its DNS information. x-ms-original-file: 2026-08-01/StorageTargets_DnsRefresh.json                                                                                                                                                                                                                                                                                         |
| [storageTargetsGetSample.ts][storagetargetsgetsample]                                 | returns a Storage Target from a cache. x-ms-original-file: 2026-08-01/StorageTargets_Get.json                                                                                                                                                                                                                                                                                                                |
| [storageTargetsListByCacheSample.ts][storagetargetslistbycachesample]                 | returns a list of Storage Targets for the specified cache. x-ms-original-file: 2026-08-01/StorageTargets_ListByCache.json                                                                                                                                                                                                                                                                                    |
| [storageTargetsRestoreDefaultsSample.ts][storagetargetsrestoredefaultssample]         | tells a storage target to restore its settings to their default values. x-ms-original-file: 2026-08-01/StorageTargets_RestoreDefaults.json                                                                                                                                                                                                                                                                   |
| [usageModelsListSample.ts][usagemodelslistsample]                                     | get the list of cache usage models available to this subscription. x-ms-original-file: 2026-08-01/UsageModels_List.json                                                                                                                                                                                                                                                                                      |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/amlFilesystemsArchiveSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/amlFilesystemsArchiveSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[amlfilesystemsarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsArchiveSample.ts
[amlfilesystemscancelarchivesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsCancelArchiveSample.ts
[amlfilesystemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsCreateOrUpdateSample.ts
[amlfilesystemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsDeleteSample.ts
[amlfilesystemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsGetSample.ts
[amlfilesystemslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsListByResourceGroupSample.ts
[amlfilesystemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsListSample.ts
[amlfilesystemsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/amlFilesystemsUpdateSample.ts
[ascoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/ascOperationsGetSample.ts
[ascusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/ascUsagesListSample.ts
[autoexportjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoExportJobsCreateOrUpdateSample.ts
[autoexportjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoExportJobsDeleteSample.ts
[autoexportjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoExportJobsGetSample.ts
[autoexportjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoExportJobsListByAmlFilesystemSample.ts
[autoexportjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoExportJobsUpdateSample.ts
[autoimportjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoImportJobsCreateOrUpdateSample.ts
[autoimportjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoImportJobsDeleteSample.ts
[autoimportjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoImportJobsGetSample.ts
[autoimportjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoImportJobsListByAmlFilesystemSample.ts
[autoimportjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/autoImportJobsUpdateSample.ts
[cachescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesCreateOrUpdateSample.ts
[cachesdebuginfosample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesDebugInfoSample.ts
[cachesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesDeleteSample.ts
[cachesflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesFlushSample.ts
[cachesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesGetSample.ts
[cacheslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesListByResourceGroupSample.ts
[cacheslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesListSample.ts
[cachespauseprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesPausePrimingJobSample.ts
[cachesresumeprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesResumePrimingJobSample.ts
[cachesspaceallocationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesSpaceAllocationSample.ts
[cachesstartprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesStartPrimingJobSample.ts
[cachesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesStartSample.ts
[cachesstopprimingjobsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesStopPrimingJobSample.ts
[cachesstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesStopSample.ts
[cachesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesUpdateSample.ts
[cachesupgradefirmwaresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/cachesUpgradeFirmwareSample.ts
[checkamlfssubnetssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/checkAmlFSSubnetsSample.ts
[expansionjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/expansionJobsCreateOrUpdateSample.ts
[expansionjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/expansionJobsDeleteSample.ts
[expansionjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/expansionJobsGetSample.ts
[expansionjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/expansionJobsListByAmlFilesystemSample.ts
[expansionjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/expansionJobsUpdateSample.ts
[getrequiredamlfssubnetssizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/getRequiredAmlFSSubnetsSizeSample.ts
[importjobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/importJobsCreateOrUpdateSample.ts
[importjobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/importJobsDeleteSample.ts
[importjobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/importJobsGetSample.ts
[importjobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/importJobsListByAmlFilesystemSample.ts
[importjobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/importJobsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/operationsListSample.ts
[rebalancejobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/rebalanceJobsDeleteSample.ts
[rebalancejobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/rebalanceJobsGetSample.ts
[rebalancejobslistbyamlfilesystemsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/rebalanceJobsListByAmlFilesystemSample.ts
[rebalancejobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/rebalanceJobsUpdateSample.ts
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/skusListSample.ts
[storagetargetoperationsflushsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetOperationsFlushSample.ts
[storagetargetoperationsinvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetOperationsInvalidateSample.ts
[storagetargetoperationsresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetOperationsResumeSample.ts
[storagetargetoperationssuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetOperationsSuspendSample.ts
[storagetargetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsCreateOrUpdateSample.ts
[storagetargetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsDeleteSample.ts
[storagetargetsdnsrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsDnsRefreshSample.ts
[storagetargetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsGetSample.ts
[storagetargetslistbycachesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsListByCacheSample.ts
[storagetargetsrestoredefaultssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/storageTargetsRestoreDefaultsSample.ts
[usagemodelslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/storagecache/arm-storagecache/samples/v9/typescript/src/usageModelsListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-storagecache
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/storagecache/arm-storagecache/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
